# kdtree-rag

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  llama_client  main.cpp
data/: test.txt
src/: llama_client.cpp  llama_client.h  main.cpp  wikihow.cpp
